<resources>
    <string name="app_name">Contacts App</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg">Please enable all permissions</string>
    <string name="info_name">Name</string>
    <string name="info_birthday">Birthday</string>
    <string name="info_address">Address</string>
    <string name="title_activity_edit_contact">Add Contact</string>
    <string name="createname">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Mail</string>
    <string name="address">Address</string>
    <string name="id">Id</string>
    <string name="phone">Phones</string>
    <string name="add">Add</string>
    <string name="birthday">Birthday</string>
    <string name="search_hint" />

    <string-array name="phone_types">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Home Fax</item>
        <item>Work Fax</item>
        <item>Main</item>
        <item>Other</item>
        <item>Custom</item>
        <item>Pager</item>
    </string-array>
    <string name="photo_picker_title">Add Photo!</string>
    <string name="photo_picker_take_photo">Take Photo</string>
    <string name="photo_picker_gallery">Choose from Library</string>
    <string name="photo_picker_cancel">Cancel</string>
    <string name="enable_permissions">ENABLE</string>
    <string name="grant_permission">GRANT</string>

</resources>

