<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditContact"
    tools:showIn="@layout/activity_edit_contact">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/contact_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/userwhite"
            app:civ_border="true"
            app:civ_border_color="#80cbc4"
            app:civ_border_width="1dp" />

        <!--<ImageButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBottom="@+id/create_imageview_descrpition"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:src="@android:drawable/ic_menu_edit" />-->

        <LinearLayout
            android:id="@+id/name_divider"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/contact_picture"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/createname"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_divider"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="15dp"

            android:layout_marginRight="15dp"
            />

        <LinearLayout
            android:id="@+id/last_name_divider"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/edit_text_name"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_marginLeft="16dp"
                android:text="@string/last_name"/>
        </LinearLayout>
        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_divider"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />


        <LinearLayout
            android:id="@+id/address_divider"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/edit_text_last_name"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_marginLeft="16dp"
                android:text="@string/address"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_divider"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="text" />

        <LinearLayout
            android:id="@+id/email_address_divider"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/edit_text_address"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/email"/>
            <ImageView
                android:id="@+id/mail_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:padding="1dp"
                android:src="@drawable/plus"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_address_divider"/>



        <LinearLayout
            android:id="@+id/add_email"
            android:layout_below="@id/recycler_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/new_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:inputType="textEmailAddress" />
            <Button
                android:id="@+id/add_new_email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_number_divider"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/add_email"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"

                android:layout_weight="1"
                android:text="@string/phone"/>
            <ImageView
                android:id="@+id/phone_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:padding="1dp"
                android:src="@drawable/plus"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_divider"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="phone" />
        <LinearLayout
            android:id="@+id/add_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler_phone"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/phone_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/new_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:inputType="phone" />
            <Button
                android:id="@+id/add_new_contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/birthday_divider"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/add_phone"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_marginLeft="16dp"
                android:text="@string/birthday"/>
        </LinearLayout>
        <EditText
            android:id="@+id/edit_text_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthday_divider"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"

            />

    </RelativeLayout>
</ScrollView>
